--- a/style.css
+++ b/style.css
@@ -140,6 +140,27 @@ html {
 .credit a, .error {
   color: #C2185B;
 }
+.cv-btn {
+  padding-top: 20px;
+}
+.cv-btn a {
+  font-size: 14px;
+  color: rgb(236, 241, 250);
+  background-color: black;
+  border: 1px solid rgb(236, 241, 250);
+  border-radius: 4px;
+  padding: 12px 25px;
+  display: inline-block;
+  text-transform: uppercase;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.cv-btn a:hover {
+  background-color: blueviolet;
+  color: violet;
+}
+
 
 
 
